src/components/dropdown/dropdown.module.css
.dropdown {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    display: none;
    box-shadow:
        rgba(0, 0, 0, 0.19) 0 10px 20px,
        rgba(0, 0, 0, 0.23) 0 6px 6px;
    position: absolute;
    top: 100%;
    left: 0;
    height: fit-content;
    overflow: auto;
    margin: 0;
    z-index: 10;
    width: 100%;
    background-color: #f1f1f1;
    min-width: 100px;
}

.default {
    left: 50%;
    transform: translateX(-50%);
}

.opened {
    display: grid;
}

.inverted {
    transform: translateY(calc(-100% - 50px));
}

.outOfRightBounds {
    left: 0;
    transform: translateX(-25%);
}

